@@ -66,15 +66,9 @@ for lang in $languages; do
     [ -n "$USES_PO" ] && rm -r ../$lang || true
 done
 
-if [ "$manual_release" = "etch" ] ; then
-    PRESEED="../en/appendix/example-preseed-etch.xml"
-    LCKEEP="-v lckeep=1"
-else
-    PRESEED="../en/appendix/example-preseed-sarge.xml"
-    LCKEEP=""
-fi
-if [ -f $PRESEED ] && [ -f preseed.awk ] ; then
-    gawk -f preseed.awk $LCKEEP $PRESEED >$destination/example-preseed.txt
+PRESEED="../en/appendix/preseed.xml"
+if [ -f $PRESEED ] && [ -f preseed.pl ] ; then
+    ./preseed.pl -r $manual_release $PRESEED >$destination/example-preseed.txt
 fi
 
 clear_po
