@@ -28,10 +28,6 @@
 </para></listitem>
   '>
 
-<!-- base-contents not used anymore, but still defined for legacy -->
-<!-- <!ENTITY list-base-contents-file 'no longer exists'> -->
-
-
 <!--  -->
 <!--  Miscellaneous files -->
 <!--  A catch-all, so that every file in -->
