@@ -48,10 +48,6 @@
 <!-- where to get the current debian-installer -->
 <!ENTITY url-debian-installer "&disturl;main/installer-&architecture;/current/">
 
-<!-- debian-installer CVSweb - OBSOLETED: should be removed when no longer used -->
-<!-- <!ENTITY url-d-i-cvsweb "http://svn.debian.org/viewcvs/d-i/"> -->
-<!ENTITY url-d-i-cvsweb "http://svn.debian.org/wsvn/d-i/">
-
 <!-- debian-installer WebSVN  -->
 <!ENTITY url-d-i-websvn "http://svn.debian.org/wsvn/d-i/">
 
@@ -253,9 +249,6 @@
 
 <!-- this link is bad and not sure how to replace it! -->
 <!ENTITY url-linux-mca "http://www.dgmicro.com/mca/general-goods.html">
-<!-- Archives are dead; link below is no longer used -->
-<!ENTITY url-linux-mca-discussion
-  "http://www.dgmicro.com/linux_frm.htm">
 
 <!-- "the link is valid but information is stale. The archive has been
 removed and text documention at link directs one to a URL that is broken." -->
@@ -270,9 +263,6 @@ removed and text documention at link directs one to a URL that is broken." -->
      http://metalab.unc.edu/LDP/HOWTO/Loadlin+Win95.html
      http://metalab.unc.edu/LDP/HOWTO/Multiboot-with-LILO.html
   -->     
-
-<!-- Link no longer exists, should be removed -->
-<!ENTITY url-windows-refund "http://www.windowsrefund.net/">
 
 <!ENTITY url-xfree86 "http://www.xfree86.org/">
 <!ENTITY url-xfree "&url-xfree86;">
