@@ -96,8 +96,6 @@
  <!ENTITY using-d-i.xml                  SYSTEM "##SRCPATH##/using-d-i/using-d-i.xml">
   <!ENTITY using-d-i-components.xml      SYSTEM "##SRCPATH##/using-d-i/components.xml">
 
-  <!ENTITY module-languagechooser.xml    SYSTEM "##SRCPATH##/using-d-i/modules/languagechooser.xml">
-  <!ENTITY module-countrychooser.xml     SYSTEM "##SRCPATH##/using-d-i/modules/countrychooser.xml">
   <!ENTITY module-localechooser.xml      SYSTEM "##SRCPATH##/using-d-i/modules/localechooser.xml">
   <!ENTITY module-s390-netdevice.xml     SYSTEM "##SRCPATH##/using-d-i/modules/s390/netdevice.xml">
   <!ENTITY module-s390-dasd.xml          SYSTEM "##SRCPATH##/using-d-i/modules/s390/dasd.xml">
