@@ -157,7 +157,7 @@ image=/boot/newinstall/vmlinuz
        label=newinstall
        initrd=/boot/newinstall/initrd.gz
        root=/dev/ram0
-       append="<phrase condition="sarge">devfs=mount,dall </phrase>ramdisk_size=12000"
+       append="ramdisk_size=12000"
 </screen></informalexample>
 
 For more details, refer to the
@@ -180,9 +180,7 @@ kernel (hd0,0)/boot/newinstall/vmlinuz root=/dev/ram0 ramdisk_size=12000
 initrd (hd0,0)/boot/newinstall/initrd.gz
 </screen></informalexample>
 
-and reboot. <phrase condition="sarge">If the boot fails, you can try adding
-<userinput>devfs=mount,dall</userinput> to the <quote>kernel</quote> line.
-</phrase>
+and reboot.
 
 </para><para>
 
@@ -342,8 +340,7 @@ parameters.
 
 Information on available boot methods and on boot parameters which might
 be useful can be found by pressing <keycap>F2</keycap> through
-<phrase condition="sarge"><keycap>F7</keycap></phrase><phrase
-condition="etch"><keycap>F8</keycap></phrase>. If you add any parameters to
+<keycap>F8</keycap>. If you add any parameters to
 the boot command line, be sure to type the boot method (the default is
 <userinput>linux</userinput>) and a space before the first parameter (e.g.,
 <userinput>linux debconf/priority=medium</userinput>).
