@@ -11,20 +11,10 @@ linux kernel. The installer should also require less memory when using
 a 2.4.x linux kernel as 2.2.x support requires a fixed-sized ramdisk
 and 2.4.x uses tmpfs.
 
-</para><para condition="etch">
+</para><para>
 
 If you are using a 2.2.x linux kernel, then you need to use the &ramdisksize;
 kernel parameter.
-
-</para><para>
-
-</para><para condition="sarge">
-
-Also, if you are using a 2.2.x linux kernel, then you must make sure you
-are using a ramdisk built to accommodate it, see the
-<ulink url="&disturl;/main/installer-&architecture;/current/images/MANIFEST">MANIFEST</ulink>.
-In general, this means you need to use the initrd22.gz ramdisk from the respective
-directory.
 
 </para><para>
 
