@@ -77,9 +77,8 @@ The installation system recognizes a few additional boot parameters<footnote>
 Note that the kernel accepts a maximum of 8 command line options and
 8 environment options (including any options added by default for the
 installer). If these numbers are exceeded, 2.4 kernels will drop any
-excess options and 2.6 kernels will panic.
-<phrase condition="etch">With kernel 2.6.9 or newer, you can use 32
-command line options and 32 environment options.</phrase>
+excess options and 2.6 kernels will panic. With kernel 2.6.9 or newer,
+you can use 32 command line options and 32 environment options.
 
 </para>
 
@@ -305,7 +304,7 @@ automating the install. See <xref linkend="automatic-install"/>.
 </para></listitem>
 </varlistentry>
 
-<varlistentry condition="etch">
+<varlistentry>
 <term>cdrom-detect/eject</term>
 <listitem><para>
 
@@ -335,7 +334,7 @@ If you are using a 2.2.x kernel, you may need to set &ramdisksize;.
 </para></listitem>
 </varlistentry>
 
-<varlistentry condition="etch">
+<varlistentry>
 <term>rescue/enable</term>
 <listitem><para>
 
