@@ -199,15 +199,9 @@ custom kernel later (see <xref linkend="kernel-baking"/>).
 
 If you get through the initial boot phase but cannot complete the
 install, the bug reporter menu choice may be helpful.
-<phrase condition="sarge">
-It copies system error logs and configuration information to a user-supplied
-floppy.
-</phrase>
-<phrase condition="etch">
 It lets you store system error logs and configuration information from the
 installer to a floppy, or download them in a web browser.
-</phrase>
-	
+
 This information may provide clues as to what went wrong and how to
 fix it.  If you are submitting a bug report you may want to attach
 this information to the bug report.
@@ -231,7 +225,7 @@ encourage installation reports to be sent even if the installation is
 successful, so that we can get as much information as possible on the largest
 number of hardware configurations. 
 
-</para><para condition="etch">
+</para><para>
 
 If you have a working Debian system, the easiest way to send an installation
 report is to install the installation-report and reportbug packages
