@@ -19,10 +19,8 @@ you will probably need to add some boot arguments like
 <userinput>root=<replaceable>root</replaceable></userinput>, where
 <replaceable>root</replaceable> is your root partition, such as
 <filename>/dev/sda1</filename>.
-<phrase condition="etch">
 Alternatively, see <xref linkend="rescue"/> for instructions on using
 the installer's built-in rescue mode.
-</phrase>
 
 </para>
 
