@@ -215,24 +215,12 @@ Once the installer starts, you will be greeted with an initial screen. Press
 &enterkey; to boot, or read the instructions for other boot
 methods and parameters (see <xref linkend="boot-parms" />).
 <phrase arch="i386">
-<phrase condition="sarge">
-If you want a 2.6 kernel, type <userinput>linux26</userinput> at the
-<prompt>boot:</prompt> prompt.
-</phrase>
-<phrase condition="etch">
 If you want a 2.4 kernel, type <userinput>install24</userinput> at the
 <prompt>boot:</prompt> prompt.
-</phrase>
 <footnote><para>
 
-<phrase condition="sarge">
-The 2.6 kernel is available for most boot methods, but not when booting from
-a floppy.
-</phrase>
-<phrase condition="etch">
 The 2.6 kernel is the default for most boot methods, but is not available
 when booting from a floppy.
-</phrase>
 
 </para></footnote>
 </phrase>
@@ -321,19 +309,9 @@ If you need more information on the install process, see
 
 If you successfully managed an installation with &d-i;,
 please take time to provide us with a report.
-<phrase condition="sarge">
-There is a template
-named <filename>install-report.template</filename> in the
-<filename>/root</filename> directory of a freshly
-installed system. Please fill it out and file it as a bug against the
-package <classname>installation-reports</classname>, as explained in
-<xref linkend="submit-bug" />.
-</phrase>
-<phrase condition="etch">
 The simplest way to do so is to install the reportbug package
 (<command>apt-get install reportbug</command>), and run
 <command>reportbug installation-report</command>.
-</phrase>
 
 </para><para>
 
