@@ -24,7 +24,7 @@ files. A preconfiguration file can be loaded from the network or from
 removable media, and used to fill in answers to questions asked during the
 installation process.
 
-</para><para condition="etch">
+</para><para>
 
 Full documentation on preseeding including a working example that you can
 edit is in <xref linkend="appendix-preseed"/>.
