@@ -92,10 +92,6 @@ append initrd=initrd.gz ramdisk_size=12000 root=/dev/ram rw
 
 Please note that the <userinput>ramdisk_size</userinput> parameter
 may need to be increased, depending on the image you are booting.
-<phrase condition="sarge">
-If the boot fails, you can try adding <userinput>devfs=mount,dall</userinput>
-to the <quote>append</quote> line.
-</phrase>
 
 </para>
    </sect3>
