@@ -99,8 +99,7 @@ message=/boot.msg
 image=/vmlinux
         label=install
         initrd=/initrd.gz
-        initrd-size=10000<phrase condition="sarge">
-        append="devfs=mount,dall --"</phrase>
+        initrd-size=10000
         read-only
 </screen></informalexample>
 
