@@ -181,9 +181,8 @@ above step may have produced, then <userinput>shutdown -r now</userinput>.
 
 </para><para>
 
-<phrase condition="etch">For more information on Debian kernels and kernel
-compilation, see the <ulink url="&url-kernel-handbook;">Debian Linux Kernel
-Handbook</ulink>.</phrase>
+For more information on Debian kernels and kernel compilation, see the
+<ulink url="&url-kernel-handbook;">Debian Linux Kernel Handbook</ulink>.
 For more information on <classname>kernel-package</classname>, read
 the fine documentation in <filename>/usr/share/doc/kernel-package</filename>.
 
