@@ -1,7 +1,7 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
- <sect1 id="rescue" condition="etch">
+ <sect1 id="rescue">
  <title>Recovering a Broken System</title>
 <para>
 
