@@ -40,8 +40,6 @@ hardware detection needs to be repeated later in the process.
 </para>
 
 &module-lowmem.xml;
-&module-languagechooser.xml;
-&module-countrychooser.xml;
 &module-localechooser.xml;
 &module-kbd-chooser.xml;
 &module-s390-netdevice.xml;
