@@ -1,25 +1,0 @@
-<!-- retain these comments for translator revision tracking -->
-<!-- $Id$ -->
-
-
-   <sect3 id="country-chooser" condition="sarge">
-   <title>Country selection</title>
-
-<para>
-
-If you selected a language in <xref linkend="lang-chooser"/> which has
-more than one country associated with it (true for Chinese, English,
-French, and many other languages), you can specify the country here.
-If you choose <guimenuitem>Other</guimenuitem> at the bottom of the list,
-you will be presented with a list of all countries, grouped by continent.
-
-</para><para>
-
-This selection will be used later in the installation process to pick the
-default timezone and a Debian mirror appropriate for your geographic
-location. If the defaults proposed by the installer are not suitable, you
-can make a different choice. The selected country, together with the selected
-language, may also affect locale settings for your new Debian system.
-
-</para>
-   </sect3>
