@@ -1,25 +1,0 @@
-<!-- retain these comments for translator revision tracking -->
-<!-- $Id$ -->
-
-
-   <sect3 id="lang-chooser" condition="sarge">
-   <title>Language selection</title>
-
-<para>
-
-As the first step of the installation, select the language in which
-you want the installation process to proceed. The language names
-are listed in both English (left side) and in the language itself
-(right side); the names on the right side are also shown in the proper
-script for the language. The list is sorted on the English names.
-
-</para><para>
-
-The language you choose will be used for the rest of the installation
-process, provided a translation of the different dialogs is available.
-If no valid translation is available for the selected language, the
-installer will default to English. The selected language will also be
-used to help select a suitable keyboard layout.
-
-</para>
-   </sect3>
