@@ -2,7 +2,7 @@
 <!-- $Id$ -->
 
 
-   <sect3 id="localechooser" condition="etch">
+   <sect3 id="localechooser">
    <title>Selecting Localization Options</title>
 
 <para>
