@@ -146,14 +146,6 @@ To sum it up:
 If you want to know the whole truth about Software RAID, have a look
 at <ulink url="&url-software-raid-howto;">Software RAID HOWTO</ulink>.
 
-<note arch="powerpc" condition="sarge"><para>
-
-There is no widely accepted standard to identify partitions containing
-RAID data on Apple Power Macintosh hardware. This means that &d-i;
-currently does not support setting up RAID on this platform.
-
-</para></note>
-
 </para><para>
 
 To create a MD device, you need to have the desired partitions it
