@@ -23,15 +23,4 @@ boot manager's documentation for more information.
 <!-- TODO: Maybe include some arch-dependent tables with supported OS'es here -->
 
 </para>
-
-<note condition="sarge"><para>
-
-The installer may fail to detect other operating systems if the partitions on
-which they reside are mounted when the detection takes place. This may occur if
-you select a mountpoint (e.g. /win) for a partition containing another operating
-system in <command>partman</command>, or if you have mounted partitions manually
-from a console.
-
-</para></note>
-
    </sect3>
