@@ -14,9 +14,8 @@ Debian system.
 </para><para>
 
 Choosing <guimenuitem>Save debug logs</guimenuitem> from the main
-menu allows you to save the log files to a floppy
-disk<phrase condition="etch">, network, hard disk, or other
-media</phrase>. This can be useful if you encounter fatal problems
+menu allows you to save the log files to a floppy disk, network, hard
+disk, or other media. This can be useful if you encounter fatal problems
 during the installation and wish to study the logs on another system
 or attach them to an installation report.
 
