@@ -132,27 +132,7 @@ repeatedly to back all the way out of the currently running component.
 
 </para></listitem>
 </varlistentry>
-<varlistentry condition="sarge">
-
-<term>languagechooser</term><listitem><para>
-
-Shows a list of languages and language variants. The installer will
-display messages in the chosen language, unless the translation for
-that language is not complete. When a translation is not complete,
-English messages are shown.
-
-</para></listitem>
-</varlistentry>
-<varlistentry condition="sarge">
-
-<term>countrychooser</term><listitem><para>
-
-Shows a list of countries. The user may choose the country he lives
-in.
-
-</para></listitem>
-</varlistentry>
-<varlistentry condition="etch">
+<varlistentry>
 
 <term>localechooser</term><listitem><para>
 
@@ -389,12 +369,11 @@ console.
 </varlistentry>
 <varlistentry>
 
-<term condition="sarge">bugreporter</term><term condition="etch">save-logs</term><listitem><para>
+<term>save-logs</term><listitem><para>
 
-Provides a way for the user to record information on a floppy
-disk<phrase condition="etch">, network, hard disk, or other media</phrase>
-when trouble is encountered, in order to accurately report installer
-software problems to Debian developers later.
+Provides a way for the user to record information on a floppy disk, network,
+hard disk, or other media when trouble is encountered, in order to accurately
+report installer software problems to Debian developers later.
 
 </para></listitem>
 </varlistentry>
