@@ -6,7 +6,7 @@ installation-guide (2006XXXX) UNRELEASED; urgency=low
     preseeding.
   * Remove the sarge preseeding docs.
   * Remove mentions of base-config and move base-config stuff to elsewhere.
-  * Add documentation of apt-setup, user-setup, clock-setup, tzsetup, and 
+  * Add documentation of apt-setup, user-setup, clock-setup, tzsetup, and
     pkgsel.
   * Change some references to tty3 (messages) to instead refer to tty4
     (syslog).
@@ -14,7 +14,12 @@ installation-guide (2006XXXX) UNRELEASED; urgency=low
   * Remove docs for baseconfig-udeb; going away with base-config.
   * Removed various bits of sarge cruft when it made things easier.
 
- -- Frans Pop <fjp@debian.org>  Mon,  2 Jan 2006 23:06:51 +0100
+  [ Frans Pop ]
+  * Change default build to Etch.
+  * Remove all Sarge specific content and make Etch specific content default.
+  * Delete some obsolete entities.
+
+ -- Frans Pop <fjp@debian.org>  Tue,  3 Jan 2006 20:34:09 +0100
 
 installation-guide (20060102) unstable; urgency=low
 
